			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.05d: *********************************

IMP: (12/5/06, SMR) Made "Routing" test menu work.

BUG: (12/5/06, SMR) Maze routing doesn't work.
FIX: In Routing.findNetEnds(), compare Connections more carefully.

BUG: (12/5/06, SMR) Array command crashes (Bug #1268).
FIX: In Array.ArrayStuff.doIt(), assign "cell" correctly.

BUG: (12/4/06, SMR) Closing a library causes a crash (Bug #1267).
FIX: In Cell.getName(), test for null "groupName" field.

BUG: (12/4/06, GVG) PWLSignal.java: missing initalization of vPoints.
Gate.java: Wrong location of the Point constructor in computePWLOutput.
New timing conditions in DTimViewAnData Liberty parser.
gate_inv_16x_25ff_hiR passes.

BUG: (12/1/06, DN) CellBackup.cellUsages invariant is not valid after rename (Bug #1235).
FIX: In "CellBackup.with" check if "this.d.cellId != d.cellId".

BUG: (12/1/06, DN) Exception checking database invariants (Bug #1266).
FIX: In ArcInst.check snap polygon bounds to database grid.

BUG/IMP: (12/1/06, GVG) Drag-n-dropping a cell group onto a cell produces a NPE (bug #1265).
FIX: Exception avoided. Improvements: if you drag a group on a layout cell, it will create an instance
of the first layout found. If you drag it on a schematic cell, it will add the first icon found.

************************* Version 8.05c: *********************************

IMP: (12/1/06, GVG) completePWLResponse had swapped signature fields. net_dir_non_const_transfunction passes now.

BUG: (11/30/06, SMR) When "Node Moves With Text" is selected, deleting an
     export also deletes the node (Bug #1255).
FIX: In CircuitChanges.deleteSelected(), temporarily disable the moves-with-text
     state when deleting.

IMP: (11/29/06, RK) Change Tech.java so its interface consists of methods rather than data members
